<resources>
    <string name="app_name">Assignments 1</string>
    <string name="hm">Hello World!</string>
    <string name="ButtonText">\'Im a button</string>
    <string name="loginID">login</string>
    <string name="hintUser">Login name</string>
    <string name="passwordID">Password</string>
    <string name="switchID">What does this do?</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="dialog_title">Title</string>
    <string name="ok">yes</string>
    <string name="cancel">Cancel</string>
    <string name="chatString">Chat</string>
    <string name="sendChat">send</string>
    <string name="outCall">text</string>
    <string name="inComing">text</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolBarString">test toolbar</string>

</resources>