<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginID">
    </TextView>
    <EditText
        android:id="@+id/ULog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUser"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordID">
    </TextView>
    <EditText
        android:id="@+id/UPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordID"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/LgButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login" />
</LinearLayout>
